--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BestWeather">
+        android:theme="@style/AppTheme.NoActionBar" >
         <activity
             android:name="com.rck.bestweather.MainActivity"
             android:exported="true">
