--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
+
+    implementation "com.google.android.gms:play-services-location:18.0.0"
 }
